--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <div class="col-md-3 text-center">
 	  <div class="box-item">
 	  <i class="circle"> <img src="images/2.png" alt="" /></i>
-	  <h3>Lorem ipsumLorem ipsum</h3>
+	  <h3>Lorem ipsum</h3>
 	  <p>Nullam ac rhoncus sapien, non gravida purus. Alinon elit imperdiet congue. Integer ultricies sed elit impe.</p>
       </div>
 	   </div>
